--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 												<li><a href="mailto:xiaobird@gmail.com" class=""><span class="label">Email</span></a></li>
 												<li><a href="https://discord.gg/35Eu3Mnsk9" class=""><span class="label">Discord</span></a></li>
 												<li><a href="https://github.com/fan0827" class=""><span class="label">Github</span></a></li>
-												<li><a href="https://mc.smpcreeper.ml" class=""><span class="label">MC伺服器</span></a></li>
+												<li><a href="https://night.smpcreeper.ml" class=""><span class="label">MC伺服器</span></a></li>
 											</td>	
 										</tr>
 									</tbody>
