--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 												<li><a href="https://discord.gg/35Eu3Mnsk9" class=""><span class="label">Discord</span></a></li>
 												<li><a href="https://github.com/fan0827" class=""><span class="label">Github</span></a></li>
 												<li><a href="https://night.birbird.site" class=""><span class="label">MC伺服器</span></a></li>
+												<li><a href="https://l.birbird.site/donate" class=""><span class="label">贊助我</span></a></li>
 											</td>	
 										</tr>
 									</tbody>
