--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 											<td>
 												<li><a href="https://youtube.com/@Xiaobird_TW" class=""><span class="label">Youtube</span></a></li>
 												<li><a href="mailto:xiaobird@gmail.com" class=""><span class="label">Email</span></a></li>
-												<li><a href="https://discord.gg/35Eu3Mnsk9" class=""><span class="label">Discord</span></a></li>
+												<li><a href="https://discord.gg/EKDDnusuaC" class=""><span class="label">Discord</span></a></li>
 												<li><a href="https://github.com/fan0827" class=""><span class="label">Github</span></a></li>
 												<li><a href="https://night.birbird.site" class=""><span class="label">MC伺服器</span></a></li>
 												<li><a href="https://l.birbird.site/donate" class=""><span class="label">贊助我</span></a></li>
